package Servicios;

public interface IHandlerBilletes {

    public void setNext(IHandlerBilletes handlerBilletes);

    public void solicitudBilletes(int cantidad);

}
